--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
 		</div>
 		<!-- Description -->
 		<div>
-               <h1>Nom et Prenom:</h1>
+               <h1>Nom § Prenom:</h1>
 
 			   <h2> NIZAR ELBAAKILI</h2>
 		</div>
